--- a/css/App.css
+++ b/css/App.css
@@ -18,7 +18,7 @@
 }
 
 .backGround {
-  background-image: url('../images/background1.jpg');
+  /*background-image: url('../images/background1.jpg');*/
     background-repeat-x: no-repeat;
     background-repeat-y: repeat;
     background-size: 407px;
