--- a/css/SevenHour.css
+++ b/css/SevenHour.css
@@ -3,6 +3,11 @@
   box-sizing: border-box;
   border-radius: 41px;
   margin-left: 22px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .seven-hour {
