--- a/css/Welcome.css
+++ b/css/Welcome.css
@@ -14,15 +14,15 @@
   width: 97px;
   height: 52px;
   border: none;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Courgette', cursive;
   font-size: 20px;
-  background-color: #DB634B;
-  color: white;
+  background-color: #e6e8fa;
+  color: black;
   border-left: 2px solid #37363B;
 }
 
 .submit-city-form {
-  border: 2px solid #37363B;
+/*  border: 2px solid #37363B;*/
   display: flex;
   justify-content: center;
   width: 704px;
@@ -30,7 +30,7 @@
 }
 
 #title {
-  font-family: 'Dr Sugiyama', cursive;
+  font-family: 'Courgette', cursive;
   text-align: center;
   margin: 19px 0 0 0;
   color: #e6e8fa;
@@ -38,10 +38,11 @@
 }
 
 #city-input {
-  width: 600px;
-  height: 49.5px;
-  border: none;
-  font-size: 25px;
+    width: 600px;
+    height: 2em;
+    margin-top: 10em;
+    border: none;
+    font-size: 25px;
 }
 
 #city-input::placeholder {
@@ -54,11 +55,12 @@
   border: 1px solid black;
   width: 100%;
   height: 30px;
-  /*margin-top: 1px;*/
+  /*margin-top: 50px;*/
   /*margin-bottom: 1px;*/
   margin: 0;
   background-color: grey;
   opacity: .8;
+  font-family: 'Cutive Mono', monospace;
 
 }
 
